[package]
name = "auxiliary_program"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI库
eframe = "0.22.0"
# 系统交互
enigo = "0.0.14"
# 配置文件解析
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 热键支持
global-hotkey = "0.4.2"
# 日志
log = "0.4"
env_logger = "0.10"
# 其他依赖
egui = "0.22.0"
